src/tests/fixtures/typename/PropertySignatureTypenameMissingType.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User implements IPerson {
  __typename;
  /** @gqlField */
  name: string;
}

/** @gqlInterface */
export interface IPerson {
  /** @gqlField */
  name: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertySignatureTypenameMissingType.ts:3:3 - error: Expected `__typename` property to have an initializer or a string literal type. For example: `__typename = "MyType"` or `__typename: "MyType";`. This lets Grats know that the GraphQL executor will be able to derive the type of the object at runtime.

3   __typename;
    ~~~~~~~~~~
